@@ -492,6 +492,7 @@ class AppController < NSObject
     handler(:tab) { tab }
     handler(:tab, :shift) { shiftTab }
     handler(:enter, :ctrl) { sendText(:notice); true }
+    handler(:enter, :alt) { @menu.onPasteDialog(nil); true }
     handler(:up, :ctrl) { move(:up); true }
     handler(:down, :ctrl) { move(:down); true }
     handler(:left, :ctrl) { move(:left); true }
